@@ -1,5 +1,8 @@
 2.0.2.IPv6
 
+Added support for mac addresses in sqlite.
+Renamed sqlight.c to sqlite.c
+
 Added second param to IPTableTransform.main for the name of the sensor in use.
 Included sample IPTableTransform.py that outputs to a mysql DB
 Changed name of python module from LookupMac to IPTableTransform
